Added new method to update quantity of a cart item
